--- a/image3.css
+++ b/image3.css
@@ -5,7 +5,7 @@
 }
 .wrapper{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     height: 100vh;
     align-items: center;
     
@@ -15,12 +15,16 @@
 }
 .bg{
     border-radius: 50%;
+    height: 350px;
+    width: 350px;
 }
 .sm{
     border-radius: 50%;
-    border: 2px solid white;
+    border: 4px solid white;
     position: absolute;
     top: 0%;
     right: 0%;
+    height: 100px;
+    width: 100px;
 }
 
